<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:id="@+id/view_shape_gradient"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/bg_gradient_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_user"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_shape_gradient"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_account_circle"

        app:layout_constraintTop_toTopOf="@+id/view_shape_gradient"
       />

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nama_user"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_profile_user"
        app:layout_constraintTop_toTopOf="@id/img_profile_user" />

    <TextView
        android:id="@+id/tv_email_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/emailuser_gmail_com"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_user" />


    <RelativeLayout
        android:id="@+id/border_month_report"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_border"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/view_shape_gradient">

        <ImageView
            android:id="@+id/ic_month_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_statistic"
            android:contentDescription="@string/laporan_bulanan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/ic_month_report"
            android:text="@string/laporan_bulanan"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border_wishlist"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_border"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/border_month_report">

        <ImageView
            android:id="@+id/ic_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_wish_product"
            android:contentDescription="@string/wishlist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/ic_wishlist"
            android:text="@string/wishlist"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/next" />

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/logout"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_wishlist"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>